cargo-features = ["profile-rustflags"]

[package]
name = "sto"
version = "0.1.0"
edition = "2021"
build = "builder.rs"

[dependencies]
deadqueue = "0"
cached = "0"
highway = "1"
serde = { version = "1", features = ["rc"] }
serde_json= "1"
dashmap = { version = "5", features = ["serde"] }
anyhow = "1"
lazy_static = "1"
tokio = { version = "1.26.0", features = ["full", "tracing"] }
once_cell = "1"
serde_derive = "1"
clap = { version = "4", features = ["derive"] }
tera = "1"
futures = "0"
atomic-counter = "1"
chrono = { version = "0", features = ["serde"] }
blazesym = "0"
num_cpus = "1"
perf-event-open-sys = "4"
libc = "0"
async-ctrlc = "1.2.0"
plain = "0"
libbpf-rs = "0"
rust-embed = "6"
async-trait = "0"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "offline" , "postgres", "chrono", "macros", "json"] }
dotenvy = "0"
rocket = { version = "0.5.0-rc.2", features = ["json", "msgpack"] }
rocket-include-tera = "0"
rocket_dyn_templates = { version = "0.1.0-rc.2" , features = ["tera"]}
ahash = "0"
moka = { version = "0", features = ["sync"] }
rocket_async_compression = "0.2.0"
reqwest = { version = "0", features = ["json", "rustls-tls", "brotli", "blocking"] }
rlimit = "0"
symbolic-demangle = { version = "12", features = ["rust", "cpp"] }
symbolic-common = "12"
enum-display-derive = "0"
deepsize = { version = "0", features = ["chrono"] }
tracing = "0"
tracing-subscriber = "0"
console-subscriber = {version = "0", features = ["parking_lot"] }

[build-dependencies]
libbpf-cargo = "0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
rustflags = ["-Ctarget-cpu=native", "-Ztune-cpu=native", "--cfg=sqlx_macros_unstable"]

[patch.crates-io]
blazesym = { git = "https://github.com/likewhatevs/blazesym.git", branch = "deepsize"}
