cmake_minimum_required(VERSION 3.22.0)
project(burn)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
add_executable(${PROJECT_NAME} main.cpp)
find_package(glog)
find_package(gflags)
find_package(folly)
find_package(Boost COMPONENTS context)
include_directories(SYSTEM ${Boost_INCLUDE_DIRS})
target_link_libraries(burn ${Boost_LIBRARIES})

target_link_libraries(${PROJECT_NAME} folly)
target_link_libraries(${PROJECT_NAME} gflags)
target_link_libraries(${PROJECT_NAME} glog)
target_link_libraries(${PROJECT_NAME} double-conversion)
set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 20)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON BOOL "Enable/Disable output of compile commands during generation.")
add_compile_options(-fno-omit-frame-pointer -g)

