cargo-features = ["profile-rustflags"]

[package]
name = "testAppTwo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0"

[profile.release]
opt-level = 0
codegen-units = 1
rustflags = ["-Zdwarf-version=2"]
